--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "watch": "webpack --watch",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "server": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,11 +17,13 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "csv-loader": "^3.0.5",
+    "express": "^4.18.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^5.3.3",
     "webpack-dev-server": "^4.9.3",
     "xml-loader": "^1.2.1"
   },
